--- a/src/index.css
+++ b/src/index.css
@@ -5,3 +5,134 @@
 	--background-white: rgba(255, 255, 255, 1);
 	--color-icono: rgba(0, 0, 0, 0, 25);
 }
+
+/* Fondo de login */
+#viewLog {
+	background-image: url('https://dynamic-media-cdn.tripadvisor.com/media/photo-o/17/e0/ce/85/sunset-beach.jpg?w=1200&h=-1&s=1');
+	background-size: cover;
+	width: 100%;
+	height: 100%;
+	/* background-color: #86353535;
+	backdrop-filter: blur(12px);
+	-webkit-backdrop-filter: blur(12px); */
+}
+
+/* Fondo semitransparente anaranjado */
+.page {
+	width: 100vw;
+	height: 100vh;
+	background: rgba(113, 58, 42, 0.45);
+}
+
+/* Secciones */
+#socialNetwork {
+	width: 100vw;
+	height: 40%;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+#formSection {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
+	margin-top: 35px;
+}
+
+#buttons {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+
+	margin-top: 40px;
+}
+
+/* Estilo al nombre */
+.textLeft {
+	width: auto;
+	font-style: normal;
+	font-weight: 600;
+	font-size: 13vw;
+	text-align: center;
+
+	color: #ffffff;
+
+	text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+}
+
+/* Estilo al logo */
+.logo {
+	margin-top: auto;
+	width: 100px;
+	height: 60px;
+}
+
+/* Estilo a las cajas de texto */
+input {
+	width: 60vw;
+	height: 5vh;
+
+	background: rgba(255, 248, 248, 0.21);
+	backdrop-filter: blur(4px);
+	/* Note: backdrop-filter has minimal browser support */
+
+	border-radius: 30px;
+	border-style: none;
+
+	text-align: center;
+	margin: 5px;
+}
+
+/* Estilo al placeholder de las cajas de texto */
+input::placeholder {
+	font-family: FontAwesome, 'Open Sans', Verdana, sans-serif;
+	font-weight: normal;
+}
+
+/* Quitarle borde al seleccionar una caja de texto */
+input:focus {
+	outline: none;
+}
+
+/* Estilo a todos los botones */
+.btn {
+	width: 45vw;
+	min-height: 5vh;
+
+	background: var(--boton-color);
+	border-radius: 30px;
+	border-style: none;
+
+	text-align: center;
+
+	color: white;
+	margin: 5px;
+	text-align: center;
+}
+
+/* Alineacion a la imagen de Google */
+.imgGoogle {
+	vertical-align: middle;
+}
+
+/* Alineacion a la frase "Continuar con Google" */
+span {
+	vertical-align: middle;
+}
+
+/* Estilo a todos los placeholder */
+::placeholder {
+	color: white;
+}
+
+/* Estilo a todos los textos */
+.text {
+	color: white;
+}
+
+/* Negrita */
+.bold {
+	font-weight: bold;
+}
