--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,16 @@
 :root {
-	--boton-color: rgb(240, 96, 48);
-	--color-transparent: rgba(181, 90, 39, 0, 16);
-	--background-gris: rgba(245, 245, 245, 1);
-	--background-white: rgba(255, 255, 255, 1);
-	--color-icono: rgba(0, 0, 0, 0, 25);
+	--brown-transparent-background: rgba(113, 58, 42, 0.45);
+	--black-transparent-background: rgba(0, 0, 0, 0.65);
+	--letter-color: rgba(255, 255, 255, 1);
+	--letter-shadow-color: rgba(0, 0, 0, 0.25);
+	--error-message-color: rgb(240, 96, 48);
+	--buttons-color: rgb(240, 96, 48);
+	--inputs-color: rgba(255, 248, 248, 0.21);
+}
+
+/* Quitarle el margen que viene por defecto en el body */
+body {
+	margin: 0px;
 }
 
 /* Fondo de login */
@@ -18,7 +25,7 @@
 #principalView1 {
 	width: 100vw;
 	height: 40vh;
-	background: rgba(113, 58, 42, 0.45);
+	background: var(--brown-transparent-background);
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -31,8 +38,8 @@
 	font-weight: 600;
 	font-size: 13vw;
 	text-align: center;
-	color: #ffffff;
-	text-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+	color: var(--letter-color);
+	text-shadow: 0px 4px 4px --letter-shadow-color;
 	margin-top: 70px;
 }
 
@@ -46,7 +53,7 @@
 #principalView2 {
 	width: 100vw;
 	height: 60vh;
-	background: rgba(113, 58, 42, 0.45);
+	background: var(--brown-transparent-background);
 	display: flex;
 	flex-direction: column;
 	align-items: center;
@@ -69,13 +76,10 @@
 input {
 	width: 65vw;
 	height: 5vh;
-
-	background: rgba(255, 248, 248, 0.21);
+	background: var(--inputs-color);
 	backdrop-filter: blur(4px);
-
 	border-radius: 30px;
 	border-style: none;
-
 	text-align: center;
 	margin: 5px;
 }
@@ -84,7 +88,7 @@ input {
 input::placeholder {
 	font-family: FontAwesome, 'Open Sans', Verdana, sans-serif;
 	font-weight: normal;
-	color: white;
+	color: var(--letter-color);
 }
 
 /* Quitarle borde al seleccionar una caja de texto */
@@ -92,12 +96,16 @@ input:focus {
 	outline: none;
 }
 
+/* Mensaje de respuesta al dar click a enlace de "Olvide mi contraseña" */
+.errorMessage {
+	color: var(--error-message-color);
+}
+
 /* Division de botones */
 #buttons {
 	display: flex;
 	flex-direction: column;
 	align-items: center;
-
 	margin-top: 40px;
 }
 
@@ -105,17 +113,19 @@ input:focus {
 .btn {
 	width: 65vw;
 	min-height: 5vh;
-
-	background: var(--boton-color);
+	background: var(--buttons-color);
 	border-radius: 30px;
 	border-style: none;
-
 	text-align: center;
-
-	color: white;
+	color: var(--letter-color);
 	margin: 5px;
 	text-align: center;
-	font-size: 20px;
+	font-size: 18px;
+}
+
+/* Cambiar de puntero al posicionarse en los botones  */
+.btn:hover {
+	cursor: pointer;
 }
 
 /* Alineacion a la imagen de Google */
@@ -130,7 +140,7 @@ span {
 
 /* Estilo a todos los textos */
 .text {
-	color: white;
+	color: var(--letter-color);
 }
 
 /* Negrita */
@@ -138,7 +148,7 @@ span {
 	font-weight: bold;
 }
 
-/* Media Query */
+/* Media Query para pantallas a partir de 600px */
 @media (min-width: 600px) {
 	/* Fondo de login */
 	#viewLog {
@@ -171,7 +181,7 @@ span {
 	#principalView2 {
 		width: 50vw;
 		height: 100vh;
-		background: rgba(0, 0, 0, 0.65);
+		background: var(--black-transparent-background);
 		justify-content: center;
 	}
 
@@ -200,6 +210,5 @@ span {
 	/* Ancho de los botones */
 	.btn {
 		width: 25vw;
-		font-size: 20px;
 	}
 }
