--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,8 @@ body {
 }
 
 /* Fondo de login */
-#viewLog {
+#viewLog,
+#viewForgetPassword {
 	background-image: url('https://dynamic-media-cdn.tripadvisor.com/media/photo-o/17/e0/ce/85/sunset-beach.jpg?w=1200&h=-1&s=1');
 	background-size: cover;
 	width: 100vw;
@@ -120,7 +121,7 @@ input:focus {
 	color: var(--letter-color);
 	margin: 5px;
 	text-align: center;
-	font-size: 18px;
+	font-size: 20px;
 }
 
 /* Cambiar de puntero al posicionarse en los botones  */
@@ -148,10 +149,27 @@ span {
 	font-weight: bold;
 }
 
+/* Vista password - division mensaje de respuesta */
+#replyMessage {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	margin-top: 30px;
+}
+
+/* Color al mensaje de respuesta */
+#message {
+	color: var(--error-message-color);
+	font-size: 20px;
+	font-weight: bold;
+	padding-bottom: 25px;
+}
+
 /* Media Query para pantallas a partir de 600px */
 @media (min-width: 600px) {
 	/* Fondo de login */
-	#viewLog {
+	#viewLog,
+	#viewForgetPassword {
 		width: 100vw;
 		height: 100vh;
 		display: flex;
