--- a/src/index.css
+++ b/src/index.css
@@ -84,6 +84,8 @@ input {
 	border-style: none;
 	text-align: center;
 	margin: 5px;
+	color: var(--letter-color);
+	font-size: 18px;
 }
 
 /* Estilo al placeholder de las cajas de texto */
@@ -91,6 +93,7 @@ input::placeholder {
 	font-family: FontAwesome, 'Open Sans', Verdana, sans-serif;
 	font-weight: normal;
 	color: var(--letter-color);
+	font-size: 13px;
 }
 
 /* Quitarle borde al seleccionar una caja de texto */
@@ -122,10 +125,10 @@ input:focus {
 	color: var(--letter-color);
 	margin: 5px;
 	text-align: center;
-	font-size: 20px;
+	font-size: 18px;
 }
 
-/* Cambiar de puntero al posicionarse en los botones  */
+/* Cambiar de puntero al posicionarse en los botones */
 .btn:hover {
 	cursor: pointer;
 }
@@ -185,12 +188,65 @@ span {
 /* Estilo a input de correo electronico */
 #emailChangePassword {
 	color: var(--letter-color);
-	font-size: 20px;
+	font-size: 18px;
 }
 
 /* Estilo al placeholder del input de correo electronico */
 #emailChangePassword::placeholder {
-	font-size: 16px;
+	color: var(--letter-color);
+	font-size: 13px;
+}
+
+/* ---------------------------------- Vista registro de usuario ---------------------------------- */
+/* Fondo de Password */
+#viewRegistration {
+	background-image: url('https://dynamic-media-cdn.tripadvisor.com/media/photo-o/17/e0/ce/85/sunset-beach.jpg?w=1200&h=-1&s=1');
+	background-size: cover;
+	width: 100vw;
+	height: 100vh;
+}
+
+/* Fondo transparente negro a seccion 1 y 2 */
+#viewRegistration #principalView1,
+#viewRegistration #principalView2 {
+	background: var(--black-transparent-background);
+}
+
+/* Alinear en el centro el formulario */
+#formRegistration {
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+
+/* Estilo al input de correo electronico */
+#viewRegistration .registerInput {
+	color: var(--letter-color);
+	font-size: 18px;
+}
+
+/* Estilo al placeholder del input de correo electronico */
+#viewRegistration .registerInput::placeholder {
+	color: var(--letter-color);
+	font-size: 13px;
+}
+
+/* Alinear division de terminos y condiciones en fila */
+#termsConditions {
+	width: 70vw;
+	display: flex;
+	flex-direction: row;
+	align-items: center;
+}
+
+/* Tamaño de checkbox de terminos y condiciones */
+.checkTerms {
+	width: 30px;
+}
+
+/* Margen superior al boton registrar */
+#btnRegister {
+	margin-top: 40px;
 }
 
 /* ---------------------------------- Media Query para pantallas a partir de 600px ---------------------------------- */
@@ -297,5 +353,49 @@ span {
 	/* Tamaño al mensaje de respuesta */
 	#message {
 		width: 40vw;
+	}
+
+	/* ---------------------------------- Vista registro de usuario ---------------------------------- */
+	/* Tamaño de vista Password */
+	#viewRegistration {
+		width: 100vw;
+		height: 100vh;
+		display: flex;
+		flex-direction: row;
+	}
+
+	/* Seccion 1 */
+	#viewRegistration #principalView1 {
+		width: 50vw;
+		height: 100vh;
+		justify-content: center;
+		background: var(--brown-transparent-background);
+	}
+
+	/* Estilo al nombre */
+	.nameSocialNetwork {
+		font-size: 5vw;
+		margin-top: 0px;
+	}
+
+	/* Tamaño al logo 1 */
+	.logo1 {
+		width: 130px;
+		height: 95px;
+	}
+
+	/* Seccion 2 */
+	#principalView2 {
+		width: 50vw;
+		height: 100vh;
+		justify-content: center;
+	}
+
+	/* Alinear division de terminos y condiciones en fila */
+	#termsConditions {
+		width: 20vw;
+		display: flex;
+		flex-direction: row;
+		align-items: center;
 	}
 }
