--- a/src/view/registration.html
+++ b/src/view/registration.html
@@ -22,30 +22,29 @@
 
         <div id="termsConditions">
             <input type="checkbox" class="checkTerms" id="checkTerms" required </input>
-            <label class="text">Acepto los <a id="termsHref" href="#/terms">términos y condiciones </a> de las Polìticas
-                de
-                Privacidad.</label>
+            <label class="textModal">Acepto los <a href="#modal" class="cta"> términos y condiciones de las Polìticas de
+                Privacidad.</a></label>
         </div>
 
         <button type="submit" class="btn" id="btnRegister"> Registrarse </button>
         <p class="text"> ¿Ya tienes una cuenta? </p>
         <a class="text bold" href="#/login"> Iniciar sesión </a>
     </form>
+</section>
 
-    <div class="modal">
-        <div class="contenedor">
-            <header>Términos y Condiciones VIAJA PE</header>
-            <label for="termsHref">X</label>
-            <div class="contenido">
-                <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non ex optio ipsum nesciunt aperiam quod
-                    quisquam illum cupiditate libero, qui illo nihil? Labore molestias minus beatae, necessitatibus
-                    incidunt voluptatem. Iusto, esse blanditiis! Perspiciatis explicabo possimus ipsum, ratione
-                    doloribus necessitatibus corporis nemo esse! Earum at labore minima? Asperiores laboriosam harum
-                    similique dolorum alias quibusdam nobis itaque voluptatem rem labore nulla reprehenderit temporibus
-                    cumque, voluptatum eveniet quasi provident tempore, neque ullam ipsum. Nostrum laboriosam iste
-                    repellat qui cum molestiae iusto assumenda accusamus.</p>
-            </div>
-
+<section id="modal" class="modal">
+    <div class="modal_container">
+        <header>Términos y Condiciones VIAJA PE</header>
+        <a href="#principalView2" class="modal_close">X</a>
+        <div class="contenido">
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Non ex optio ipsum nesciunt aperiam quod
+                quisquam illum cupiditate libero, qui illo nihil? Labore molestias minus beatae, necessitatibus
+                incidunt voluptatem. Iusto, esse blanditiis! Perspiciatis explicabo possimus ipsum, ratione
+                doloribus necessitatibus corporis nemo esse! Earum at labore minima? Asperiores laboriosam harum
+                similique dolorum alias quibusdam nobis itaque voluptatem rem labore nulla reprehenderit temporibus
+                cumque, voluptatum eveniet quasi provident tempore, neque ullam ipsum. Nostrum laboriosam iste
+                repellat qui cum molestiae iusto assumenda accusamus.</p>
         </div>
+
     </div>
 </section>
