--- a/src/index.css
+++ b/src/index.css
@@ -399,3 +399,46 @@ span {
 		align-items: center;
 	}
 }
+
+body, .modal{
+	width: 100%;
+	height: 100vh;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.modal{
+	position:fixed;
+	top: 0;
+	left: 0;
+	background: rgba(0, 0, 0, 0.5) ;
+	transition: all 500ms ease;
+	opacity: 0;
+	visibility: hidden;
+}
+
+.modal_container {
+	width: 1000px;
+	height: 800px;
+	margin: auto;
+	background: #fff;
+	box-shadow: 1px 7px 25px rgba(0, 0, 0, 0.6);
+	transition: all 500ms ease;
+	position: relative;
+}
+
+.modal_container header {
+	padding: 10px;
+	background: rgb(240, 96, 48);
+	color: #fff
+}
+
+.modal_container label {
+	position: absolute;
+	top: 10px;
+	right: 10px;
+	color: #fff;
+	font-size: 15px;
+	cursor: pointer;
+}
