--- a/src/index.css
+++ b/src/index.css
@@ -231,6 +231,15 @@ span {
 	font-size: 13px;
 }
 
+/* Mensaje de error en los campos ingresados */
+.message {
+	width: 80vw;
+	color: var(--letter-color);
+	font-size: 13px;
+	text-align: center;
+	padding-bottom: 10px;
+}
+
 /* Alinear division de terminos y condiciones en fila */
 #termsConditions {
 	width: 70vw;
@@ -391,6 +400,10 @@ span {
 		justify-content: center;
 	}
 
+	/* Mensaje de error en los campos ingresados */
+	.message {
+		width: 25vw;
+	}
 	/* Alinear division de terminos y condiciones en fila */
 	#termsConditions {
 		width: 20vw;
