--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -92,8 +92,13 @@ body {
     padding: 10px;
 }
 
+.iconBar {
+	cursor: pointer;
+}
 
-/* @media (min-width: 600px) {
+
+@media (min-width: 600px) {
+/*
     body {
         margin-top: 0px
     }
@@ -139,5 +144,9 @@ body {
         margin-top: 0%;
         margin-bottom: auto;
     }
+*/
+    .iconBar {
+        cursor: pointer;
+    }
 
-} */
+}
