home style mobile

--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -17,16 +17,14 @@ body {
     background-color: rgba(245, 245, 245, 1);
     width: auto;
     height: 100vh;
-}
-
-.contacts {
-    display: none;
+    display: flex;
+	flex-direction: column;  
 }
 
 .userInfo{
     display: flex;
     justify-content: space-between;
-    margin: 0px 10px 30px 10px;
+    margin: 0px 10px 30px 30px;
     padding: 20px;
 }
 
@@ -39,6 +37,13 @@ body {
     border-radius: 50%;
     height: 96px;
     width: 96px;
+    margin-right: 10px;
+}
+
+.authorPhoto {
+    border-radius: 50%;
+    height: 45px;
+    width: 45px;
 }
 
 .postTextBox {
@@ -49,8 +54,8 @@ body {
 .inputPublish {
     display: flex;
     border: transparent;
-    width: 320px;
-    height: 100px;
+    width: 75vw;
+    height: 13vh;
     margin-left: auto;
     margin-right: auto;
     margin-bottom: 0%;
@@ -70,12 +75,21 @@ body {
     justify-content: space-around;
     align-items: center;
     margin: 0px 30px 0px 30px;
-    height: 40px;
-    width: 352px;
+    width: 75vw;
+    height: 5vh;
+    padding: 0px 15px 0px 15px;
     margin-left: auto;
     margin-right: auto;
     background-color: var(--nav-color);
     border-radius: 0px 0px 15px 15px;
+}
+
+.menuBar {
+    bottom: 0px;
+    position: fixed;
+    margin-left: 20px;
+    margin-bottom: 30px;
+    padding: 10px 0px 5px 12px;
 }
 
 .navBar {
@@ -84,13 +98,8 @@ body {
     align-items: center;
     background-color: var(--nav-color);
     border-radius: 15px;
-    height: 40px;
-    width: 352px;
-    bottom: 0;
-    position: fixed;
-    margin-left: 20px;
-    margin-right: 10px;
-    margin-bottom: 30px;
+    height: 4vh;
+    width: 80vw;
     padding: 10px;
 }
 
@@ -98,7 +107,7 @@ body {
 	cursor: pointer;
 }
 
-@media (min-width: 600px) {
+@media (min-width: 900px) {
     body {
         margin-top: 0px
     }
@@ -114,9 +123,10 @@ body {
     }
 
     .userInfo{
-        height: 100px;
-        width: 773px;
-        margin: 0px 10px 30px 280px;
+        height: 10vh;
+        width: 70vw;
+        margin: 30px 0px 30px 200px;
+        /* margin: 30px 10px 30px 120px; */
         padding: 20px;
     }
 
@@ -130,14 +140,11 @@ body {
     }
 
     .postTextBox {
-        height: 300ox;
-        width: 300px;
+        margin: 100px;
+        width: 85vw;
+        height: 20vh;
     }
-    .container {
-        display: flex;
-        align-content: space-around;
-    }
-
+    
     .navBar {
         display: flex;
         flex-direction: column;
