--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -84,6 +84,11 @@ body {
     border-radius: 0px 0px 15px 15px;
 }
 
+.like {
+    width: 50px;
+    height: 50px;
+}
+
 .menuBar {
     bottom: 0px;
     position: fixed;
